kubernetes/apps/kube-system/metrics-server/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: metrics-server
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: metrics-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: observability
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
    - fromEntities:
        - kube-apiserver
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
    - toEntities:
        - kube-apiserver
